2007-09-27  Martin Lambers <marlam@marlam.de>

	* cvtool/cmd_info.c: Improve output of the info command.

2007-09-26  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_misc.c: Handle rounding errors when computing the standard
	deviation in cvl_statistics().

2007-09-13  Martin Lambers <marlam@marlam.de>

	* cvtool/cvtool.c: Don't create a GL context for the simple commands
	"help" and "version".

2007-09-10  Martin Lambers <marlam@marlam.de>

	* doc/cvl.texi: Add copyright and license info for GLEW code, required
	by the GLEW license.

2007-09-09  Martin Lambers <marlam@marlam.de>

	* configure.ac, doc/cvtool.texi, doc/cvl.texi, doc/cvtool.1,
	doc/doxy/doxyfile: Bump version numbers and dates for 0.2.1.
	* NEWS: Update for 0.2.1.

2007-09-05  Martin Lambers <marlam@marlam.de>

	* Fix a bad bug in cvl_reduce() that produced wrong results.
	* Improve the shader program for cvl_reduce().

2007-09-04  Martin Lambers <marlam@marlam.de>

	* Fix minor documentation flaw.
	* Export cvl_math functions.

2007-08-31  Martin Lambers <marlam@marlam.de>

	* Version 0.2.0: Complete rewrite. OpenGL is now used to delegate the
	processing tasks to the GPU. Floating point data is supported.